[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internet_scale_honeypot_analytics_platform"
version = "0.1.0"
description = "Operate distributed honeypots and analyze attacker behavior trends."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
